# rust_tonic

./: Cargo.toml  README.md
proto/: helloworld.proto
src/: server.rs
