[package]
name = "helloworld-tonic"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "helloworld-server"
path = "src/server.rs"

[[bin]] # Bin to run the HelloWorld gRPC client
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tonic = "0.8"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
log = "0.4.17"
simple_logger = "4.0.0"
num_cpus = "1.14.0"
actix-web = "4.2.1"
actix-web-prom = "0.6.0"
actix-web-tonic = { git = "https://github.com/hengfeiyang/actix-web-tonic", branch = "main" }

[build-dependencies]
tonic-build = "0.8"
